assets/css/styles.css
@import "fonts.css";

@tailwind base;

@tailwind components;

@tailwind utilities;


h1,
h2,
h3,
p{
    @apply font-header;
}

@layer components{

    h1,h2{
        @apply text-main-dark italic;
    }

    h1{
        @apply text-2xl tablet:text-4xl font-light;
    }

    h2{
        @apply text-base tablet:text-2xl;
    }

    p{
        @apply font-light text-main-dark;
    }

    .center-inside{
        float: none !important;
        @apply mx-auto;
    }

    .owl-customized .owl-carousel .owl-wrapper-outer{
        overflow: visible;
    }

    .owl-customized .owl-item .block-carousel-image-container{
        @apply relative;
    }
    
    .owl-customized .owl-item .block-carousel-image-container img{
        filter: invert(17%) sepia(49%) saturate(5868%) hue-rotate(328deg) brightness(101%) contrast(93%);
        @apply p-1 tablet:p-2 select-none;
    }

    .owl-customized .owl-item{
        @apply filter grayscale transition duration-150;
    }
    .owl-customized .owl-item.active{
        @apply filter grayscale-0 ;
    }

    .owl-customized .owl-loaded .owl-item{
        @apply opacity-50; 
    }

    .owl-customized .owl-loaded .owl-item.active{
        @apply opacity-100;
    }

    .owl-customized .owl-disabled{
        @apply flex flex-wrap justify-between;
    }

    .owl-customized .owl-disabled .owl-item{
        min-width: 150px;
        flex-basis: 30%;
        @apply flex-grow mb-10 mx-2 tablet-wide:px-10 ;
    }

    .owl-customized .owl-disabled .owl-item img{
        filter: invert(17%) sepia(49%) saturate(5868%) hue-rotate(328deg) brightness(101%) contrast(93%) grayscale(100%);
        transition: 150ms;
    }

    .owl-customized .owl-disabled .owl-item:hover img{
        filter: invert(17%) sepia(49%) saturate(5868%) hue-rotate(328deg) brightness(101%) contrast(93%);
    }

}


.leo-wishlist-button.btn-primary{
    @apply absolute right-0 top-3 w-6 h-6 tablet:w-8 tablet:h-8 rounded-l-md bg-white shadow-md p-2 box-content z-20;
}

.page-product .leo-wishlist-button.btn-primary{
    @apply shadow-none;
}

.wishlist .leo-wishlist-button.btn-primary.active{
    @apply bg-gray-1000
}

.wishlist .leo-wishlist-button.btn-primary.active:hover{
    @apply bg-white
}

.btn-primary.btn-primary:active:hover{
    @apply bg-gray-1000
}

.btn-primary.btn-primary:hover{
    @apply bg-white
}

.leo-wishlist-bt-content{
    @apply flex;
}

.wishlist-svg{
    @apply fill-current text-main-dark group-hover:text-main transition;
}

.wishlist-svg path{
    @apply transition;
}

.swiper-popular .swiper-pagination{
    @apply hidden tablet:block
}

.swiper-popular .swiper-pagination-bullet{
    @apply bg-transparent border border-solid border-gray-3000 transition w-3 h-3
}

.swiper-popular .swiper-pagination-bullet-active{
    @apply bg-black border-black transform scale-125
}

.swiper-banner .swiper-pagination .swiper-pagination-bullet{
    @apply bg-transparent border border-solid border-white opacity-75 transition w-3 h-3;
}

.swiper-banner .swiper-pagination .swiper-pagination-bullet-active{
    @apply bg-white border-white transform scale-125;
}

/* Rest of SEO section styles are in builder */
#homepage_content.collapse[aria-expanded="false"] p{
    @apply line-clamp-5;
}

.ApImage.last{
    @apply rounded-md bg-gray-1000 desktop-presta:bg-transparent desktop-presta:mt-0 mt-3;
}

.ApImage.last a{
    @apply flex-row items-center desktop-presta:items-baseline desktop-presta:flex-col;
}

.ApImage.last a div:first-child{
    @apply w-1/3 desktop-presta:w-full;
}

.ApImage.last .image_description {
    @apply flex justify-center items-center desktop-presta:justify-start  w-2/3 desktop-presta:w-auto mt-0 ml-0 desktop-presta:mt-6 desktop-presta:ml-8; 
}

.off-canvas-nav:before{
    @apply text-xl font-bold ;
}

.off-canvas-nav{
    @apply opacity-0 transition duration-500;
}

.off-canvas-active .off-canvas-nav{
    @apply opacity-100 transform rotate-180;
}

.off-canvas-nav-megamenu .open-sub > .caret{
  @apply transform rotate-[180deg] ;
}

.dropdown-menu-inner .nav-link{
    @apply p-5 -mx-5 border-0 border-b border-gray-1000 border-solid;
}

li[data-menu-type="category"]{
    @apply bg-gray-1000 tablet-medium:bg-transparent;
}

li[data-menu-type="category"] a{
    @apply font-light;
}

li[data-menu-type="url"] a{
    @apply font-normal;
}

.megamenu-overlay,.off-canvas-nav-megamenu .offcanvas-mainnav{
    @apply top-[53px] tablet:top-[81px];
}

#search_filters .add{
    @apply pl-5 inline;
} 

#search_filters .facet-label.active a{
    @apply text-main font-normal ;
}

#search_filters .facet-label.active > span{
    @apply inline-block;
} 

#search_filters .facet-label > span{
    @apply hidden;
} 

#search_filters .title.collapsed p,#search_filters .title.collapsed i{
    @apply text-main-dark;
}

#search_filters .title p,#search_filters .title i{
    @apply text-main transition;
}

.swiper-filters .swiper-wrapper .swiper-slide{
    @apply w-auto h-auto  tablet:h-full;
}

/* #search_filters_wrapper.collapse.in #search_filters .swiper-filters{
    @apply tablet:pb-[250px] tablet:mb-[-250px];
} */

.select-list.js-search-link.current{
    @apply font-normal;
}

.faceted-overlay .spinner.spinner {
    @apply border-t-main;
}


.sidebar .category-sub-menu a{
    @apply font-light text-base text-main-dark hover:text-main transition;
}

.sidebar .category-sub-menu li[data-depth="0"]>a{
    @apply font-normal;
}

.sidebar .category-sub-menu li[data-depth="0"]{
    @apply border-gray-1000;
}

.sidebar .category-sub-menu li a{
    @apply pl-5 py-[18px];
}

.sidebar .category-sub-menu li div:last-child{
    @apply w-full;
}

.sidebar .category-sub-menu .collapsed i{
    @apply transform rotate-0;
}


.ajax_block_product.ajax_block_product{
    @apply px-0;
} 

.pagination .current{
    @apply text-main-dark;
}


div#js-product-list-top:before {
    content: '';
    background: #fff;
    display: block;
    position: absolute;
    left: 0;
    right: 0;
    z-index: 10;
    transform: translate(-100%,0);
    opacity: 1;
    top: 0;
    bottom: 0;
}
div#js-product-list-top:after {
    content: '';
    background: #fff;
    display: block;
    position: absolute;
    left: 0;
    right: 0;
    z-index: 16;
    transform: translate(100%,0);
    top: 0;
    opacity: 1;
    bottom: 0;
}
#left-column{
    z-index: 26;
}

